Fix for overflowing

--- a/css/exf.css
+++ b/css/exf.css
@@ -2891,6 +2891,7 @@ html.theme-dark .exf-ctl-cnt.exf-switch input[type="range"] {
   position: relative;
   display: -ms-grid;
   display: grid;
+  grid-gap: 0.5rem;
       grid-template-areas: var(--lv-tile-content-template-areas);
   -ms-grid-rows: var(--lv-tile-content-template);
       grid-template-rows: var(--lv-tile-content-template);
